--- a/diff.tex
+++ b/diff.tex
@@ -245,12 +245,9 @@ These graph-convolutional operations are useful for transforming small-molecules
 
 To facilitate the use of graph-convolutional layers in future work, we open-source our Tensorflow\cite{abadi2016tensorflow} implementation of graph-convolutions, graph-pooling, and graph-gathering layers as part of DeepChem \cite{ram2016}.
 
-\DIFdelbegin %DIFDELCMD < \begin{figure}[h]
-%DIFDELCMD < \includegraphics[width=\textwidth]{graphconv_graphic_v1.png}
-%DIFDELCMD < %%%
-\DIFdelend \DIFaddbegin \begin{figure}[H]
+\begin{figure}[H]
 \includegraphics[width=\textwidth]{graphconv_graphic_v2.png}
-\DIFaddendFL \captionof{figure}{Graphical representation of the major graph operations described in this paper. For each of the operations, the nodes being operated on are shown in blue, with unchanged nodes shown in light blue. For graph convolution and graph pool, the operation is shown for a single node, $v$, however, these operations are performed on all nodes $v$ in the graph simultaneously.}
+\captionof{figure}{Graphical representation of the major graph operations described in this paper. For each of the operations, the nodes being operated on are shown in blue, with unchanged nodes shown in light blue. For graph convolution and graph pool, the operation is shown for a single node, $v$, however, these operations are performed on all nodes $v$ in the graph simultaneously.}
 \label{conv}
 \end{figure}
 
